scalp/output/draw.py scalp/data/load.py notebooks/scalp_demo.ipynb notebooks/scalp_debug_blob_issue.ipynb notebooks/scalp_2dplot.ipynb

--- a/notebooks/scalp_demo.ipynb
+++ b/notebooks/scalp_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8d11c30c-1e7b-4bbc-aaf7-b6989c2afe66",
    "metadata": {},
    "outputs": [],
@@ -25,13 +25,190 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "29cef8c8-3b23-4903-97b8-ad172c2153eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/ikea/data/benchdata/'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scalp.test_config.scib_datapath"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "39e15c7e-ca87-4dd5-ab5e-3cc9aa00ff5d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/specs/registry.py:249: OldFormatWarning: Element '/layers' was written without encoding metadata.\n",
+      "  return self.callback(read_func, elem.name, elem, iospec=get_spec(elem))\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/specs/registry.py:249: OldFormatWarning: Element '/layers/counts' was written without encoding metadata.\n",
+      "  return self.callback(read_func, elem.name, elem, iospec=get_spec(elem))\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/batch' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/batch' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/chemistry' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/chemistry' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/data_type' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/data_type' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/dpt_pseudotime' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/final_annotation' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/final_annotation' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/mt_frac' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/n_counts' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/n_genes' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/size_factors' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/species' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/species' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/study' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/study' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/tissue' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/tissue' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/index' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/var/index' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/specs/registry.py:249: OldFormatWarning: Element '/layers' was written without encoding metadata.\n",
+      "  return self.callback(read_func, elem.name, elem, iospec=get_spec(elem))\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/specs/registry.py:249: OldFormatWarning: Element '/layers/counts' was written without encoding metadata.\n",
+      "  return self.callback(read_func, elem.name, elem, iospec=get_spec(elem))\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/batch' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/batch' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/chemistry' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/chemistry' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/data_type' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/data_type' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/dpt_pseudotime' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/final_annotation' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/final_annotation' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/mt_frac' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/n_counts' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/n_genes' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/sample_ID' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/sample_ID' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/size_factors' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/species' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/species' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/study' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/study' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/tissue' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/tissue' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/index' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/var/index' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/specs/registry.py:249: OldFormatWarning: Element '/layers' was written without encoding metadata.\n",
+      "  return self.callback(read_func, elem.name, elem, iospec=get_spec(elem))\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/dataset' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/dataset' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/location' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/location' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/nGene' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/nUMI' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/patientGroup' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/patientGroup' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/percent.mito' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/protocol' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/protocol' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/sanger_type' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/sanger_type' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/size_factors' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/sampling_method' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/sampling_method' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/batch' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/batch' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/cell_type' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/cell_type' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/__categories/donor' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/donor' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/obs/index' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/utils.py:205: OldFormatWarning: Element '/var/index' was written without encoding metadata.\n",
+      "  return func(*args, **kwargs)\n",
+      "/home/ikea/.myconda/miniconda3/envs/scalp2/lib/python3.11/site-packages/anndata/_io/specs/registry.py:249: OldFormatWarning: Element '/X' was written without encoding metadata.\n",
+      "  return self.callback(read_func, elem.name, elem, iospec=get_spec(elem))\n"
+     ]
+    }
+   ],
    "source": [
-    "datasets = scalp.data.loaddata_scib(scalp.test_config.scib_datapath,  maxdatasets=10,  maxcells = 1000 )\n",
-    "dataset = datasets[2]"
+    "datasets = scalp.data.loaddata_scib(scalp.test_config.scib_datapath, \n",
+    "                                    maxdatasets=3,  maxcells = 1000 )\n",
+    "dataset = datasets[-1] # this is the pancreatic"
    ]
   },
   {
@@ -361,7 +538,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
