--- a/notebooks/scalp_sanky.ipynb
+++ b/notebooks/scalp_sanky.ipynb
@@ -4,13 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dfac27a5-40db-4f13-a4af-67f31baf90b0",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -43,13 +37,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7099cfab-147f-4f50-b950-cfcc161f2480",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from scalp.output import sankey\n",
@@ -92,8 +80,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
