--- a/notebooks/scalp_sanky_diffusion.ipynb
+++ b/notebooks/scalp_sanky_diffusion.ipynb
@@ -4,13 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dfac27a5-40db-4f13-a4af-67f31baf90b0",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -120,13 +114,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "03e7e818-40c4-48a8-92ef-aaac6f0d8bd4",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
@@ -138,13 +126,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2bd61bfc-8feb-40a8-b354-54bdc52ea265",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
@@ -218,13 +200,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "79605823-16d1-4bb9-920f-a7a8add3b545",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "so.heatmap(zero)"
@@ -256,13 +232,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d4edc8fa-ba1b-4319-92e0-baefbdb1ea00",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -282,8 +252,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
