fixed some imports, moved the bbknn embedder

--- a/notebooks/scalp_demo.ipynb
+++ b/notebooks/scalp_demo.ipynb
@@ -36,6 +36,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "990a40a0-2864-4cbc-9f57-91510e9e52db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "39e15c7e-ca87-4dd5-ab5e-3cc9aa00ff5d",
    "metadata": {},
    "outputs": [],
@@ -178,13 +186,16 @@
     "    # scalp.umapwrap.graph_jax(dataset,(csr_matrix(grap), csr_matrix(neggraph)),label = 'umap', n_components = 2)\n",
     "    \n",
     "    plt.matshow(grap.todense())\n",
-    "    # scalp.umapwrap.graph_umap(dataset,grap,label = 'umap', n_components = dim)\n",
-    "    scalp.umapwrap.graph_pacmap(dataset,csr_matrix(grap).toarray(),label = 'umap', n_components = dim)\n",
+    "    \n",
+    "    # scalp.umapwrap.umap_last_experiment(dataset,grap,label = 'umap', n_components = dim)\n",
+    "    \n",
+    "    # scalp.umapwrap.graph_pacmap(dataset,csr_matrix(grap).toarray(),label = 'umap', n_components = dim)\n",
+    "    \n",
+    "    scalp.umapwrap.graph_umap(dataset,grap,label = 'umap', n_components = dim) # THIS IS WHAT WE WANT TO USE I GUESS\n",
     "    return scalp.transform.stack(dataset)\n",
     "\n",
-    "for i in [1,2,3,4]:\n",
-    "    stack = Scalp(dataset[:i])\n",
-    "    sc.pl.umap(stack, color=['batch', 'label'])"
+    "stack = Scalp(dataset)\n",
+    "sc.pl.umap(stack, color=['batch', 'label'])"
    ]
   },
   {
@@ -210,16 +221,12 @@
     "    stack = fun(dat,8)\n",
     "    return stack\n",
     "    \n",
-    "mydata = ut.xxmap(run, tasks) "
+    "mydata = ut.xxmap(run, tasks) \n",
+    "for e in mydata:\n",
+    "    if 'umap' not in e.obsm:\n",
+    "        e.obsm['umap']= e.obsm['X_umap']\n",
+    "        e.obsm.pop('X_umap')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4e6ba4b-2a75-40ac-8c1a-efbe8c9923c5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -228,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scalp.score import score_lin, score_lin_batch, score_scib_metrics\n",
+    "from scalp.output.score import score_lin, score_lin_batch, score_scib_metrics\n",
     "scoredics_lb = ut.xxmap(score_lin_batch, mydata)\n",
     "scoredics_scib = ut.xxmap(score_scib_metrics, mydata)\n",
     "scoredics_l = ut.xxmap(score_lin, mydata)\n",
@@ -268,8 +275,10 @@
     "\n",
     "\n",
     "funcs = 'scanorama, umaponly, bbknn, combat, Scalp'.split(', ')\n",
+    "\n",
     "results = [ [{\"method\":funcs[f], 'score':ss, 'dataset':d, 'metric':scrmeth } \n",
-    "             for (scrmeth,ss) in s.items() ]for s,(f,d) in zip(scoredicts,tasks)]\n",
+    "             for (scrmeth,ss) in s.items() ]for s,(f,d) in zip(scoredics_scib,tasks)]\n",
+    "\n",
     "results = lmz.Flatten(results)\n",
     "\n",
     "df = pd.DataFrame(results)\n",
@@ -298,7 +307,7 @@
     "    return lmz.Transpose(scores)    \n",
     "  \n",
     "\n",
-    "scr_l, scr_b = split_scib_scores(scoredicts)\n",
+    "scr_l, scr_b = split_scib_scores(scoredics_scib)\n",
     "results = [ {\"method\":funcs[f], 'score':s, 'dataset':d, 'target':'bioconservation_scib_avg' } for s,(f,d) in zip(scr_l,tasks)]\n",
     "results += [ {\"method\":funcs[f], 'score':s, 'dataset':d, 'target':'batch_scib_avg'} for s,(f,d) in zip(scr_b,tasks)]\n",
     "df = pd.DataFrame(results)\n",
@@ -314,7 +323,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "\n",
+    "our_score = [ {\"method\":funcs[f], 'score':s, 'dataset':d, 'target':'label' } for s,(f,d) in zip(scoredics_l,tasks) ]\n",
+    "our_score += [ {\"method\":funcs[f], 'score':s, 'dataset':d, 'target':'batch'} for s,(f,d) in zip(scoredics_lb,tasks)  ]\n",
+    "df2 = pd.DataFrame(our_score)\n",
+    "df2"
    ]
   },
   {
@@ -331,10 +344,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3618c922-5627-45c1-885f-85f914a107be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pareto_scores(df2) # this is pancreatic only  btw "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d2be69fc-1ec9-42f0-8428-91e33589da88",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df"
+   ]
   },
   {
    "cell_type": "code",
@@ -355,6 +380,14 @@
    "source": [
     "np.corrcoef(ours.batch.values, theirs.batch_scib_avg.values)[0,1], np.corrcoef(ours.label.values, theirs.bioconservation_scib_avg.values)[0,1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99079553-5107-44df-8bdf-4764822f46d6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
