--- a/notebooks/scalp_debug_blob_issue.ipynb
+++ b/notebooks/scalp_debug_blob_issue.ipynb
@@ -3,6 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bdbe583d-2a3f-4253-96b5-3d32e25e454a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import bbknn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8d11c30c-1e7b-4bbc-aaf7-b6989c2afe66",
    "metadata": {},
    "outputs": [],
@@ -95,6 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pacmap\n",
     "reducer = pacmap.PaCMAP(n_components=2,n_neighbors=10, MN_ratio=0.5, FP_ratio=5.0)\n",
     "# fit the data (The index of transformed data corresponds to the index of the original data)\n",
     "stack = scalp.transform.stack(dataset)\n",
@@ -102,6 +113,16 @@
     "X_transformed = reducer.fit_transform(X, init=\"pca\")\n",
     "stack.obsm['umap']= X_transformed\n",
     "sc.pl.umap(stack, color=['batch', 'label'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3efc351-74ae-4991-8318-3b60f7312083",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset"
    ]
   },
   {
@@ -128,17 +149,18 @@
     "    dataset, grap = scalp.mkgraph(dataset,**parm)\n",
     "\n",
     "    \n",
-    "    # scalp.umapwrap.graph_pacmap2(dataset,csr_matrix(grap),label = 'umap', n_components = dim)\n",
-    "    #scalp.umapwrap.graph_pacmap(dataset,grap, label = 'umap', n_components = dim)\n",
-    "    #scalp.umapwrap.graph_xxumap(dataset,grap, label = 'umap', n_components = dim)\n",
+    "    scalp.umapwrap.graph_pacmap2(dataset,csr_matrix(grap),label = 'umap', n_components = dim)\n",
+    "    # scalp.umapwrap.graph_pacmap(dataset,grap, label = 'umap', n_components = dim)\n",
+    "    # scalp.umapwrap.graph_xxumap(dataset,grap, label = 'umap', n_components = dim)\n",
     "    # scalp.umapwrap.graph_umap(dataset,grap,label = 'umap', n_components = dim)\n",
+    "    # scalp.umapwrap.umap_last_experiment(dataset,grap,label = 'umap', n_components = dim)\n",
     "    \n",
     "    #plt.matshow(grap.todense())\n",
     "    return scalp.transform.stack(dataset), grap\n",
     "\n",
     "#stack, grap= Scalp([dataset[0]])\n",
     "stack, grap= Scalp(dataset)\n",
-    "#sc.pl.umap(stack, color=['batch', 'label'])"
+    "sc.pl.umap(stack, color=['batch', 'label'])"
    ]
   },
   {
