--- a/notebooks/scalp_demo.ipynb
+++ b/notebooks/scalp_demo.ipynb
@@ -162,6 +162,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bd17d3e4-abc6-430b-8215-d6b1f2154a85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e1e25760-33eb-4ff3-ba6d-a55b168be9f3",
    "metadata": {},
    "outputs": [],
@@ -187,16 +197,32 @@
     "    \n",
     "    plt.matshow(grap.todense())\n",
     "    \n",
-    "    # scalp.umapwrap.umap_last_experiment(dataset,grap,label = 'umap', n_components = dim)\n",
+    "    dataset = scalp.umapwrap.umap_last_experiment(dataset,grap,label = 'umap', n_components = dim)\n",
     "    \n",
     "    # scalp.umapwrap.graph_pacmap(dataset,csr_matrix(grap).toarray(),label = 'umap', n_components = dim)\n",
     "    \n",
-    "    scalp.umapwrap.graph_umap(dataset,grap,label = 'umap', n_components = dim) # THIS IS WHAT WE WANT TO USE I GUESS\n",
+    "    # scalp.umapwrap.graph_umap(dataset,grap,label = 'umap', n_components = dim) # THIS IS WHAT WE WANT TO USE I GUESS\n",
     "    return scalp.transform.stack(dataset)\n",
     "\n",
     "stack = Scalp(dataset)\n",
     "sc.pl.umap(stack, color=['batch', 'label'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc9e7a6d-586e-4f09-9e19-634e8d6d00ba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28e58bd8-dcb8-444f-8bed-82e92e388bd4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -226,6 +252,107 @@
     "    if 'umap' not in e.obsm:\n",
     "        e.obsm['umap']= e.obsm['X_umap']\n",
     "        e.obsm.pop('X_umap')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d53eec65-6549-44d7-9258-217762a648dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OK HERE COMES THE NEW SYSTEM\n",
+    "# lets make mydata compatible with the new system \n",
+    "\n",
+    "# tasks = function, dataid\n",
+    "datasets_stack = Map(scalp.transform.stack, datasets) \n",
+    "for (fu,da), result in zip(tasks, mydata):\n",
+    "    datasets_stack[da].obsm[str(fu)] = result.obsm['umap']\n",
+    "    datasets_stack[da].uns.setdefault('methods', []).append(str(fu))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c56c92e-b0e3-4066-a4b7-cb344750376f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets_stack[0].uns['methods']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "596b350c-6be1-4be0-8c0f-5abcb6ef24ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = { str(i): scalp.score.scalp_scores(datasets_stack[i]) for i in lmz.Range(datasets_stack) }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2fe9e30-6c02-4df6-bd58-f648234071e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f07a8186-0889-46da-81d0-368f3ef7e160",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "funcs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76e26d2c-c673-4735-a29d-87182f02df86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ranktable, dom = scalp.output.score.pareto_avg(scores)\n",
+    "ranktable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5821803-552c-476b-b471-34c19474c17e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d8fcf8b-5079-4445-9ac7-5a217e4a71db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scikit_posthocs as sp\n",
+    "test_results = sp.posthoc_conover_friedman(\n",
+    "    dom,\n",
+    "    melted=True,\n",
+    "    block_col='dataset',\n",
+    "    group_col='method',\n",
+    "    y_col='domcount',\n",
+    ")\n",
+    "#sp.sign_plot(test_results)\n",
+    "plt.figure(figsize=(10, 2), dpi=100)\n",
+    "plt.title('Critical difference diagram of average score ranks')\n",
+    "sp.critical_difference_diagram(avg_rank, test_results)"
    ]
   },
   {
@@ -274,14 +401,15 @@
     "# this is for SCIB scoring \n",
     "\n",
     "\n",
+    "# turn scores into a dataframe\n",
     "funcs = 'scanorama, umaponly, bbknn, combat, Scalp'.split(', ')\n",
-    "\n",
     "results = [ [{\"method\":funcs[f], 'score':ss, 'dataset':d, 'metric':scrmeth } \n",
     "             for (scrmeth,ss) in s.items() ]for s,(f,d) in zip(scoredics_scib,tasks)]\n",
-    "\n",
     "results = lmz.Flatten(results)\n",
-    "\n",
     "df = pd.DataFrame(results)\n",
+    "\n",
+    "\n",
+    "\n",
     "sns.barplot(data=df, y = 'score', x = 'method', errorbar = 'sd', hue = 'metric')\n",
     "plt.legend(loc='right', bbox_to_anchor=(1.85, 0.5), ncol=1)\n",
     "plt.show()"
@@ -296,6 +424,7 @@
    "source": [
     "\n",
     "def split_scib_scores(dicts):\n",
+    "    '''splits scores in batch and label scores'''\n",
     "    batchwords = 'PCR_batch ASW_label/batch graph_conn'.split()\n",
     "    \n",
     "    def split(d):\n",
@@ -384,10 +513,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99079553-5107-44df-8bdf-4764822f46d6",
+   "id": "a1eafc7b-3810-483f-80e1-ede1e08fd6a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dom\n",
+    "\n",
+    "avg_rank = dom.groupby('dataset').domcount.rank(pct=True).groupby(dom.method).mean()\n",
+    "\n",
+    "avg_rank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4b24af9-e976-475d-a44b-24df41ce750b",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84360297-9feb-4070-abdb-cbc6bc556d61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "funcs"
+   ]
   }
  ],
  "metadata": {
