fixed a notebook and added stratification to scoring

--- a/notebooks/scalp_demo.ipynb
+++ b/notebooks/scalp_demo.ipynb
@@ -36,14 +36,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "990a40a0-2864-4cbc-9f57-91510e9e52db",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "39e15c7e-ca87-4dd5-ab5e-3cc9aa00ff5d",
    "metadata": {},
    "outputs": [],
@@ -165,9 +157,7 @@
    "id": "bd17d3e4-abc6-430b-8215-d6b1f2154a85",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dataset"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -340,20 +330,7 @@
    "id": "4d8fcf8b-5079-4445-9ac7-5a217e4a71db",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import scikit_posthocs as sp\n",
-    "test_results = sp.posthoc_conover_friedman(\n",
-    "    dom,\n",
-    "    melted=True,\n",
-    "    block_col='dataset',\n",
-    "    group_col='method',\n",
-    "    y_col='domcount',\n",
-    ")\n",
-    "#sp.sign_plot(test_results)\n",
-    "plt.figure(figsize=(10, 2), dpi=100)\n",
-    "plt.title('Critical difference diagram of average score ranks')\n",
-    "sp.critical_difference_diagram(avg_rank, test_results)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -530,7 +507,9 @@
    "id": "b4b24af9-e976-475d-a44b-24df41ce750b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dom"
+   ]
   },
   {
    "cell_type": "code",
@@ -540,6 +519,27 @@
    "outputs": [],
    "source": [
     "funcs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23d4371a-51b0-4eb5-a637-dd449c8713e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scikit_posthocs as sp\n",
+    "test_results = sp.posthoc_conover_friedman(\n",
+    "    dom,\n",
+    "    melted=True,\n",
+    "    block_col='dataset',\n",
+    "    group_col='method',\n",
+    "    y_col='domcount',\n",
+    ")\n",
+    "#sp.sign_plot(test_results)\n",
+    "plt.figure(figsize=(10, 2), dpi=100)\n",
+    "plt.title('Critical difference diagram of average score ranks')\n",
+    "sp.critical_difference_diagram(avg_rank, test_results)"
    ]
   }
  ],
