fixed a bug in data loader

--- a/notebooks/scalp_demo.ipynb
+++ b/notebooks/scalp_demo.ipynb
@@ -20,7 +20,8 @@
     "import scalp\n",
     "from scalp.output import draw\n",
     "import lmz\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n"
    ]
   },
   {
@@ -36,12 +37,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3e96b637-db8a-4b74-be10-baf86fab483e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "39e15c7e-ca87-4dd5-ab5e-3cc9aa00ff5d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasets = scalp.data.loaddata_scib(scalp.test_config.scib_datapath, \n",
-    "                                    maxdatasets=3,  maxcells = 1000 )\n",
+    "#datasets = scalp.data.loaddata_scib(scalp.test_config.scib_datapath,  maxdatasets=3,  maxcells = 1000 )\n",
+    "\n",
+    "datasets = list(scalp.data.scib(scalp.test_config.scib_datapath,  maxdatasets=3,  maxcells = 1000 ))\n",
     "dataset = datasets[-1] # this is the pancreatic"
    ]
   },
